adjust metod